#
#     José Angel Caso Sanchez (jascaso@gijon.es)
#
#    jul 2004
#
#    jul 2017 -> PLC HMI library
#

AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4

bin_PROGRAMS = 01-counter 02-bunch 03-object 04-new 05-list 06-polymorphic 07-array

01_counter_SOURCES=json.c xml.c intern.c keepconf.cc 01-counter.cc
02_bunch_SOURCES=json.c xml.c intern.c keepconf.cc 02-bunch.cc
03_object_SOURCES=json.c xml.c intern.c keepconf.cc 03-object.cc
04_new_SOURCES=json.c xml.c intern.c keepconf.cc 04-new.cc
05_list_SOURCES=json.c xml.c intern.c keepconf.cc 05-list.cc
06_polymorphic_SOURCES=json.c xml.c intern.c keepconf.cc 06-polymorphic.cc
07_array_SOURCES=json.c xml.c intern.c keepconf.cc 07-array.cc

EXTRA_DIST = configure.ac

